added stepbystep component with routerlink in html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
   <li><a routerLink="first">First Component</a></li>
   <li><a routerLink="second">Second Component</a></li>
   <li><a routerLink="bigO">Big O Component</a></li>
+  <li><a routerLink="stepByStep">Step By Step Component</a></li>
+
   <!-- <app-big-o></app-big-o> -->
 </ul>
 <router-outlet></router-outlet>
